<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_switch_scan"
        android:summaryOff="@string/pref_desc_switch_scan"
        android:title="@string/pref_title_switch_scan" />
    <SwitchPreference
        android:defaultValue="false"
        android:dependency="pref_switch_scan"
        android:key="pref_switch_bg"
        android:summaryOn="Scan might not be able to continue for prolonged periods of time in this mode"
        android:title="@string/pref_title_switch_bg" />
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="pref_switch_scan"
        android:key="pref_switch_fg"
        android:title="@string/pref_title_switch_fg" />
</PreferenceScreen>