<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_beacon_oor"
        android:title="@string/pref_title_notif_oor" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_beacon_oor"
        android:key="notifications_vibrate"
        android:title="@string/pref_title_vibrate" />
    <ListPreference
        android:defaultValue="10"
        android:dependency="notifications_beacon_oor"
        android:entries="@array/pref_list_notif_frequency_titles"
        android:entryValues="@array/pref_list_notif_frequency_values"
        android:key="pref_notif_frequency"
        android:title="@string/pref_title_notif_freq" />

    <Preference
        android:key="pref_system_notif"
        android:title="@string/pref_title_system_notif"></Preference>


</PreferenceScreen>
