<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="10000"
        android:entries="@array/pref_list_bg_period_entries"
        android:entryValues="@array/pref_list_bg_period_values"
        android:key="pref_bg_period"
        android:title="@string/pref_title_bg_period" />
    <ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="300000"
        android:entries="@array/pref_list_bg_delay_entries"
        android:entryValues="@array/pref_list_bg_delay_values"
        android:key="pref_bg_delay"
        android:title="@string/pref_title_bg_delay" />
    <ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="2000"
        android:entries="@array/pref_list_fg_period_entries"
        android:entryValues="@array/pref_list_fg_period_values"
        android:key="pref_fg_period"
        android:title="@string/pref_title_fg_period" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_list_fg_delay_entries"
        android:entryValues="@array/pref_list_fg_delay_values"
        android:key="pref_fg_delay"
        android:title="@string/pref_title_fg_delay" />
</PreferenceScreen>