<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.project.tenvinc.bluetoothreminder.activities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.project.tenvinc.bluetoothreminder.activities.SettingsActivity$ScanPreferenceFragment"
        android:icon="@drawable/ic_settings_bluetooth_black"
        android:title="@string/pref_header_scan" />

    <header
        android:fragment="com.project.tenvinc.bluetoothreminder.activities.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black"
        android:title="@string/pref_header_notifications" />

</preference-headers>
