<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/type_label"
        app:layout_constraintStart_toStartOf="@+id/majorLabel"
        app:layout_constraintTop_toBottomOf="@+id/majorLabel" />

    <TextView
        android:id="@+id/distText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:text="Dist. of 10.0m away"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="@+id/majorDialogText2"
        app:layout_constraintStart_toStartOf="@+id/typeLabel"
        app:layout_constraintTop_toBottomOf="@+id/typeLabel" />

    <TextView
        android:id="@+id/majorDialogText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="1"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/majorLabel"
        app:layout_constraintEnd_toEndOf="@+id/minorText"
        app:layout_constraintStart_toStartOf="@+id/minorText"
        app:layout_constraintTop_toTopOf="@+id/majorLabel" />

    <TextView
        android:id="@+id/majorDialogText2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="iBeacon"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/typeLabel"
        app:layout_constraintEnd_toEndOf="@+id/majorDialogText"
        app:layout_constraintStart_toStartOf="@+id/majorDialogText"
        app:layout_constraintTop_toTopOf="@+id/typeLabel" />

    <TextView
        android:id="@+id/majorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/major_label"
        app:layout_constraintStart_toStartOf="@+id/minorLabel"
        app:layout_constraintTop_toBottomOf="@+id/minorLabel" />

    <TextView
        android:id="@+id/minorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/minor_label"
        app:layout_constraintStart_toStartOf="@+id/uuidLabel"
        app:layout_constraintTop_toBottomOf="@+id/uuidLabel" />

    <TextView
        android:id="@+id/minorText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/minorLabel"
        app:layout_constraintEnd_toEndOf="@+id/uuidText"
        app:layout_constraintStart_toStartOf="@+id/uuidText"
        app:layout_constraintTop_toTopOf="@+id/minorLabel" />

    <TextView
        android:id="@+id/uuidLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/uuid_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uuidText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:scrollbars="horizontal"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/uuidLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/uuidLabel"
        app:layout_constraintTop_toTopOf="@+id/uuidLabel"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>